# Autoclank9001

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE-KICAD.md  README.md  claude_resume.md  main.cpp  todo.txt
data/: README.md  manifest.json  sources.json
docs/: _config.yml  faq.md  index.md  install.md
docs/demos/: index.md  maze-game.md  screenshots.md
docs/features/: image-editing.md  image-generation.md  image-resolver.md  index.md  mouser-integration.md  ticket-runner.md  tool-router.md
kicad/pcbnew/: board.h
modules/: model_chunks.cpp  model_chunks.hpp
modules/001_prompt_cleanup/: cleanup.cpp  cleanup.hpp
modules/002_dictionary/: dictionary.cpp  dictionary.hpp
modules/003_stylize/: qwen14b.cpp  qwen14b.hpp  stylize.cpp  stylize.hpp
modules/004_expertise/: expertise.cpp  expertise.hpp
modules/005_context/: context.cpp  context.hpp
modules/006_disambiguate/: disambiguate.cpp  disambiguate.hpp
modules/007_knowledge/: downloader.cpp  downloader.hpp  kb.cpp  kb.hpp  wikipedia.cpp  wikipedia.hpp
modules/008_entities/: entities.cpp  entities.hpp
modules/009_tools/: answer.cpp  answer.hpp  classify.cpp  classify.hpp  correction.cpp  correction.hpp  statement.cpp  statement.hpp
modules/010_interface/: app.css  app.js  codejar.min.js  embed_assets.py  index.html  models_settings.cpp  models_settings.hpp  prism-all.min.js  server.cpp  server.hpp  sessions_store.cpp  sessions_store.hpp  status.cpp  status.hpp  toastui-editor-plugin-code-syntax-highlight.min.js
modules/011_scripting/: scripting.cpp  scripting.hpp
modules/012_hardware/: hardware.cpp  hardware.hpp
modules/012_task_scheduler/: scheduler.cpp  scheduler.hpp
modules/013_bench/: bench.cpp  bench.hpp
modules/013_hex_editor/: hex_editor.cpp  hex_editor.hpp
modules/014_format_translators/: translators.cpp  translators.hpp
modules/015_doc_reader/: doc_reader.cpp  doc_reader.hpp
modules/016_safety/: safety.cpp  safety.hpp
modules/017_council/: council.cpp  council.hpp
modules/018_artifact_safety/: safety_folder.cpp  safety_folder.hpp
modules/019_artifact_legal/: legal_folder.cpp  legal_folder.hpp
modules/020_artifact_ip/: ip_folder.cpp  ip_folder.hpp
modules/021_artifact_decisions/: decisions_folder.cpp  decisions_folder.hpp
modules/022_project_memory/: project_memory.cpp  project_memory.hpp
modules/023_personal_memory/: personal_memory.cpp  personal_memory.hpp
modules/024_memory_composer/: composer.cpp  composer.hpp
modules/025_forget_redact/: forget_redact.cpp  forget_redact.hpp
modules/026_merge_dedup/: merge_dedup.cpp  merge_dedup.hpp
modules/027_decision_log/: decision_log.cpp  decision_log.hpp
modules/028_style_profile/: style_profile.cpp  style_profile.hpp
modules/029_salience/: salience.cpp  salience.hpp
modules/030_provenance/: provenance.cpp  provenance.hpp
modules/031_scope_guard/: scope_guard.cpp  scope_guard.hpp
modules/032_recall_probe/: recall_probe.cpp  recall_probe.hpp
modules/033_people/: people.cpp  people.hpp
modules/034_knowledge_graph/: knowledge_graph.cpp  knowledge_graph.hpp
modules/035_export_import/: export_import.cpp  export_import.hpp
modules/036_memory_reconcile/: memory_reconcile.cpp  memory_reconcile.hpp
modules/037_recap_distiller/: recap_distiller.cpp  recap_distiller.hpp
modules/038_memory_browser/: memory_browser.cpp  memory_browser.hpp
modules/039_inline_editor/: inline_editor.cpp  inline_editor.hpp
modules/040_robots_sitemap/: robots_sitemap.cpp  robots_sitemap.hpp
modules/041_feed_reader/: feed_reader.cpp  feed_reader.hpp
modules/042_readability/: readability.cpp  readability.hpp
modules/043_structured_data/: structured_data.cpp  structured_data.hpp
modules/044_dedup_ingest/: dedup_ingest.cpp  dedup_ingest.hpp
modules/045_change_watcher/: change_watcher.cpp  change_watcher.hpp
modules/046_link_graph/: link_graph.cpp  link_graph.hpp
modules/047_crawl_politeness/: crawl_politeness.cpp  crawl_politeness.hpp
modules/048_kb_store/: kb_store.cpp  kb_store.hpp
modules/049_page_triage/: page_triage.cpp  page_triage.hpp
modules/050_site_crawler/: site_crawler.cpp  site_crawler.hpp
modules/051_api_harvester/: api_harvester.cpp  api_harvester.hpp
modules/052_wayback/: wayback.cpp  wayback.hpp
modules/053_export_replay/: export_replay.cpp  export_replay.hpp
modules/054_reference_library/: reference_library.cpp  reference_library.hpp
modules/055_citation_key/: citation_key.cpp  citation_key.hpp
modules/056_ref_formats/: ref_formats.cpp  (+1 more)
scratchpad/: fetch_new_models.sh  fetch_qwen_encoders.sh  kicad_integration.md  kicad_port_feasibility.md  mouser_routing_bug.md  office_suite_research.md  sound_tts_research.md  subject_consistency_research.md
scripts/: rename_sweep.py  spdx_stamp.py
testing/: self_test.cpp  test_abbreviation_and_ligature_expander.cpp  test_abi_calldata_decoder.cpp  test_absorber_and_diffuser_designer.cpp  test_acceptance_sampling_planner.cpp  test_accessibility_auditor.cpp  test_acoustic_measurement_suite.cpp  test_acoustic_species_id.cpp  test_activation_and_waste_classifier.cpp  test_activation_explorer.cpp  test_adaptive_icon_studio.cpp  test_adaptive_optics_simulator.cpp  test_adcp_profile_processor.cpp  test_address_toolkit.cpp  test_address_verifier.cpp  test_adif_logbook.cpp  test_ads_b_traffic_console.cpp  test_advanced_raster_image_editor_photoshop_gimp_class.cpp  test_adverse_media_scanner.cpp  test_aero_cda_and_downforce_estimator.cpp  test_aero_optimizer.cpp  test_afr_and_lambda_analyzer.cpp  test_aftercare_protocol_generator.cpp  test_ai_summarizer_and_tldr_stack.cpp  test_air_quality_aggregator.cpp  test_aircraft_logbook.cpp  test_airfoil_library.cpp  test_airfoil_shape_editor.cpp  test_ais_decoder_and_viewer.cpp  test_ais_vessel_decoder.cpp  test_alara_dose_planner.cpp  test_algorithm_scaffolds.cpp  test_alignment_viewer.cpp  test_allometric_dose_calculator.cpp  test_alloy_composer.cpp  test_alloy_database_browser.cpp  test_altium_import.cpp  test_aml_risk_scorer.cpp  test_amortization_loan_designer.cpp  test_amortization_schedule_builder.cpp  (+2206 more)
(+4442 files in other folders)
